--- a/Interface_Master.ioc
+++ b/Interface_Master.ioc
@@ -1,9 +1,9 @@
 #MicroXplorer Configuration settings - do not modify
-CAN.ABOM=ENABLE
 CAN.BS1=CAN_BS1_6TQ
+CAN.CalculateBaudRate=500000
 CAN.CalculateTimeBit=2000
 CAN.CalculateTimeQuantum=250.0
-CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit,BS1,Prescaler,ABOM
+CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit,Prescaler,BS1,CalculateBaudRate
 CAN.Prescaler=9
 Dma.Request0=USART3_RX
 Dma.Request1=USART2_RX
@@ -27,77 +27,69 @@ Dma.USART3_RX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.USART3_RX.0.Priority=DMA_PRIORITY_LOW
 Dma.USART3_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
+IWDG.IPParameters=Reload,Prescaler
+IWDG.Prescaler=IWDG_PRESCALER_128
+IWDG.Reload=1000
 KeepUserPlacement=false
+Mcu.CPN=STM32F103C8T6
 Mcu.Family=STM32F1
 Mcu.IP0=CAN
 Mcu.IP1=DMA
-Mcu.IP10=USART3
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SPI1
-Mcu.IP5=SPI2
+Mcu.IP2=IWDG
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SPI1
 Mcu.IP6=SYS
 Mcu.IP7=TIM3
-Mcu.IP8=USART1
-Mcu.IP9=USART2
-Mcu.IPNb=11
+Mcu.IP8=USART2
+Mcu.IP9=USART3
+Mcu.IPNb=10
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
-Mcu.Pin0=PD0-OSC_IN
-Mcu.Pin1=PD1-OSC_OUT
-Mcu.Pin10=PB0
-Mcu.Pin11=PB10
-Mcu.Pin12=PB11
-Mcu.Pin13=PB13
-Mcu.Pin14=PB14
-Mcu.Pin15=PB15
-Mcu.Pin16=PA8
-Mcu.Pin17=PA9
-Mcu.Pin18=PA10
-Mcu.Pin19=PA11
-Mcu.Pin2=PA0-WKUP
-Mcu.Pin20=PA12
-Mcu.Pin21=PA13
-Mcu.Pin22=PA14
-Mcu.Pin23=PA15
-Mcu.Pin24=PB3
-Mcu.Pin25=PB4
-Mcu.Pin26=PB5
-Mcu.Pin27=PB6
-Mcu.Pin28=PB7
-Mcu.Pin29=PB8
-Mcu.Pin3=PA1
-Mcu.Pin30=PB9
-Mcu.Pin31=VP_SYS_VS_Systick
-Mcu.Pin32=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin4=PA2
-Mcu.Pin5=PA3
-Mcu.Pin6=PA4
-Mcu.Pin7=PA5
-Mcu.Pin8=PA6
-Mcu.Pin9=PA7
-Mcu.PinsNb=33
+Mcu.Pin0=PC13-TAMPER-RTC
+Mcu.Pin1=PD0-OSC_IN
+Mcu.Pin10=PA7
+Mcu.Pin11=PB0
+Mcu.Pin12=PB10
+Mcu.Pin13=PB11
+Mcu.Pin14=PA13
+Mcu.Pin15=PA14
+Mcu.Pin16=PB8
+Mcu.Pin17=PB9
+Mcu.Pin18=VP_IWDG_VS_IWDG
+Mcu.Pin19=VP_SYS_VS_Systick
+Mcu.Pin2=PD1-OSC_OUT
+Mcu.Pin20=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin3=PA0-WKUP
+Mcu.Pin4=PA1
+Mcu.Pin5=PA2
+Mcu.Pin6=PA3
+Mcu.Pin7=PA4
+Mcu.Pin8=PA5
+Mcu.Pin9=PA6
+Mcu.PinsNb=21
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=__DLC__,8
 Mcu.UserName=STM32F103C8Tx
-MxCube.Version=4.27.0
-MxDb.Version=DB.4.0.270
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.DMA1_Channel3_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.DMA1_Channel6_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false
+MxCube.Version=6.5.0
+MxDb.Version=DB.6.0.50
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.CAN1_RX1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.DMA1_Channel3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Channel6_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.ForceEnableDMAVector=true
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true
-NVIC.USART3_IRQn=true\:0\:0\:false\:false\:true\:true
-NVIC.USB_HP_CAN1_TX_IRQn=true\:0\:0\:false\:false\:true\:true
-NVIC.USB_LP_CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.USART3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.USB_LP_CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 PA0-WKUP.GPIOParameters=GPIO_Label
 PA0-WKUP.GPIO_Label=LED 1
 PA0-WKUP.Locked=true
@@ -106,80 +98,56 @@ PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=LED 2
 PA1.Locked=true
 PA1.Signal=GPIO_Output
-PA10.Locked=true
-PA10.Signal=GPIO_Output
-PA11.Locked=true
-PA11.Signal=GPIO_Output
-PA12.Locked=true
-PA12.Signal=GPIO_Output
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA15.Locked=true
-PA15.Signal=GPIO_Output
+PA2.GPIOParameters=GPIO_Label
+PA2.GPIO_Label=USART2_TX-XBee
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
+PA3.GPIOParameters=GPIO_Label
+PA3.GPIO_Label=USART2_RX-XBee
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
 PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=LED 3
 PA4.Locked=true
 PA4.Signal=GPIO_Output
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=SCK-XBee
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
+PA6.GPIOParameters=GPIO_Label
+PA6.GPIO_Label=MISO-XBee
 PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
+PA7.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=MOSI-XBee
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
-PA8.GPIOParameters=GPIO_Label
-PA8.GPIO_Label=CSN nRF24
-PA8.Locked=true
-PA8.Signal=GPIO_Output
-PA9.GPIOParameters=GPIO_Label
-PA9.GPIO_Label=CE nRF24
-PA9.Locked=true
-PA9.Signal=GPIO_Output
 PB0.GPIOParameters=GPIO_Label
-PB0.GPIO_Label=SS XBEE
+PB0.GPIO_Label=SSEL-XBee
 PB0.Locked=true
 PB0.Signal=GPIO_Output
+PB10.GPIOParameters=GPIO_Label
+PB10.GPIO_Label=USART3_TX-LCD
 PB10.Mode=Asynchronous
 PB10.Signal=USART3_TX
+PB11.GPIOParameters=GPIO_Label
+PB11.GPIO_Label=USART3_RX-LCD
 PB11.Mode=Asynchronous
 PB11.Signal=USART3_RX
-PB13.Mode=Full_Duplex_Master
-PB13.Signal=SPI2_SCK
-PB14.Mode=Full_Duplex_Master
-PB14.Signal=SPI2_MISO
-PB15.Mode=Full_Duplex_Master
-PB15.Signal=SPI2_MOSI
-PB3.Locked=true
-PB3.Signal=GPIO_Output
-PB4.Locked=true
-PB4.Signal=GPIO_Output
-PB5.Locked=true
-PB5.Signal=GPIO_Output
-PB6.Locked=true
-PB6.Mode=Asynchronous
-PB6.Signal=USART1_TX
-PB7.Locked=true
-PB7.Mode=Asynchronous
-PB7.Signal=USART1_RX
 PB8.Locked=true
-PB8.Mode=Master
+PB8.Mode=CAN_Activate
 PB8.Signal=CAN_RX
 PB9.Locked=true
-PB9.Mode=Master
+PB9.Mode=CAN_Activate
 PB9.Signal=CAN_TX
-PCC.Checker=false
-PCC.Line=STM32F103
-PCC.MCU=STM32F103C(8-B)Tx
-PCC.PartNumber=STM32F103C8Tx
-PCC.Seq0=0
-PCC.Series=STM32F1
-PCC.Temperature=25
-PCC.Vdd=3.3
+PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
+PC13-TAMPER-RTC.GPIO_Label=LED
+PC13-TAMPER-RTC.Locked=true
+PC13-TAMPER-RTC.Signal=GPIO_Output
 PD0-OSC_IN.Mode=HSE-External-Oscillator
 PD0-OSC_IN.Signal=RCC_OSC_IN
 PD1-OSC_OUT.Mode=HSE-External-Oscillator
@@ -194,7 +162,7 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F103C8Tx
-ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.6.1
+ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.4
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
@@ -207,11 +175,12 @@ ProjectManager.PreviousToolchain=SW4STM32
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=Interface_Master.ioc
 ProjectManager.ProjectName=Interface_Master
+ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
-ProjectManager.TargetToolchain=SW4STM32
+ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_CAN_Init-CAN-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_SPI2_Init-SPI2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_USART2_UART_Init-USART2-false-HAL-true,10-MX_USART3_UART_Init-USART3-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_CAN_Init-CAN-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_USART3_UART_Init-USART3-false-HAL-true,9-MX_IWDG_Init-IWDG-false-HAL-true
 RCC.ADCFreqValue=36000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -239,21 +208,15 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
-SPI2.CalculateBaudRate=18.0 MBits/s
-SPI2.Direction=SPI_DIRECTION_2LINES
-SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
-SPI2.Mode=SPI_MODE_MASTER
-SPI2.VirtualType=VM_MASTER
-USART1.IPParameters=VirtualMode,Mode
-USART1.Mode=MODE_TX
-USART1.VirtualMode=VM_ASYNC
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 USART3.IPParameters=VirtualMode
 USART3.VirtualMode=VM_ASYNC
+VP_IWDG_VS_IWDG.Mode=IWDG_Activate
+VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=custom
+isbadioc=false
