--- a/Interface_Master.ioc
+++ b/Interface_Master.ioc
@@ -15,7 +15,7 @@ Dma.USART2_RX.1.MemInc=DMA_MINC_ENABLE
 Dma.USART2_RX.1.Mode=DMA_NORMAL
 Dma.USART2_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART2_RX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.USART2_RX.1.Priority=DMA_PRIORITY_MEDIUM
+Dma.USART2_RX.1.Priority=DMA_PRIORITY_LOW
 Dma.USART2_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 Dma.USART3_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART3_RX.0.Instance=DMA1_Channel3
@@ -27,9 +27,10 @@ Dma.USART3_RX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.USART3_RX.0.Priority=DMA_PRIORITY_LOW
 Dma.USART3_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 IWDG.IPParameters=Reload,Prescaler
-IWDG.Prescaler=IWDG_PRESCALER_128
-IWDG.Reload=1000
+IWDG.Prescaler=IWDG_PRESCALER_64
+IWDG.Reload=700
 KeepUserPlacement=false
 Mcu.CPN=STM32F103C8T6
 Mcu.Family=STM32F1
@@ -54,12 +55,13 @@ Mcu.Pin12=PB10
 Mcu.Pin13=PB11
 Mcu.Pin14=PA13
 Mcu.Pin15=PA14
-Mcu.Pin16=PB8
-Mcu.Pin17=PB9
-Mcu.Pin18=VP_IWDG_VS_IWDG
-Mcu.Pin19=VP_SYS_VS_Systick
+Mcu.Pin16=PB6
+Mcu.Pin17=PB8
+Mcu.Pin18=PB9
+Mcu.Pin19=VP_IWDG_VS_IWDG
 Mcu.Pin2=PD1-OSC_OUT
-Mcu.Pin20=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin20=VP_SYS_VS_Systick
+Mcu.Pin21=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin3=PA0-WKUP
 Mcu.Pin4=PA1
 Mcu.Pin5=PA2
@@ -67,7 +69,7 @@ Mcu.Pin6=PA3
 Mcu.Pin7=PA4
 Mcu.Pin8=PA5
 Mcu.Pin9=PA6
-Mcu.PinsNb=21
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=__DLC__,8
 Mcu.UserName=STM32F103C8Tx
@@ -138,6 +140,10 @@ PB11.GPIOParameters=GPIO_Label
 PB11.GPIO_Label=USART3_RX-LCD
 PB11.Mode=Asynchronous
 PB11.Signal=USART3_RX
+PB6.GPIOParameters=GPIO_PuPd
+PB6.GPIO_PuPd=GPIO_PULLUP
+PB6.Locked=true
+PB6.Signal=GPIO_Input
 PB8.Locked=true
 PB8.Mode=CAN_Activate
 PB8.Signal=CAN_RX
@@ -167,7 +173,7 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Src
 ProjectManager.NoMain=false
