Atualização de codigo

--- a/Interface_Master.ioc
+++ b/Interface_Master.ioc
@@ -7,7 +7,8 @@ CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit,Prescaler,BS1,CalculateBa
 CAN.Prescaler=9
 Dma.Request0=USART3_RX
 Dma.Request1=USART2_RX
-Dma.RequestsNb=2
+Dma.Request2=USART3_TX
+Dma.RequestsNb=3
 Dma.USART2_RX.1.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART2_RX.1.Instance=DMA1_Channel6
 Dma.USART2_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
@@ -26,11 +27,20 @@ Dma.USART3_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART3_RX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.USART3_RX.0.Priority=DMA_PRIORITY_LOW
 Dma.USART3_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.USART3_TX.2.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART3_TX.2.Instance=DMA1_Channel2
+Dma.USART3_TX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART3_TX.2.MemInc=DMA_MINC_ENABLE
+Dma.USART3_TX.2.Mode=DMA_NORMAL
+Dma.USART3_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART3_TX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.USART3_TX.2.Priority=DMA_PRIORITY_LOW
+Dma.USART3_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 IWDG.IPParameters=Reload,Prescaler
-IWDG.Prescaler=IWDG_PRESCALER_64
-IWDG.Reload=700
+IWDG.Prescaler=IWDG_PRESCALER_32
+IWDG.Reload=200
 KeepUserPlacement=false
 Mcu.CPN=STM32F103C8T6
 Mcu.Family=STM32F1
@@ -77,9 +87,11 @@ MxCube.Version=6.5.0
 MxDb.Version=DB.6.0.50
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.CAN1_RX1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.DMA1_Channel2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Channel3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Channel6_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:true\:true\:1\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
@@ -140,10 +152,11 @@ PB11.GPIOParameters=GPIO_Label
 PB11.GPIO_Label=USART3_RX-LCD
 PB11.Mode=Asynchronous
 PB11.Signal=USART3_RX
-PB6.GPIOParameters=GPIO_PuPd
+PB6.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
+PB6.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB6.GPIO_PuPd=GPIO_PULLUP
 PB6.Locked=true
-PB6.Signal=GPIO_Input
+PB6.Signal=GPXTI6
 PB8.Locked=true
 PB8.Mode=CAN_Activate
 PB8.Signal=CAN_RX
@@ -208,6 +221,8 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=72000000
 RCC.USBFreq_Value=72000000
 RCC.VCOOutput2Freq_Value=8000000
+SH.GPXTI6.0=GPIO_EXTI6
+SH.GPXTI6.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
 SPI1.CalculateBaudRate=18.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
